# cloud-cleaner-2

./: README.md  pyproject.toml
examples/: rules.example.yaml
src/cloudcleaner/: __init__.py  cli.py  config.py  demo.py  models.py  pricing.py  quarantine.py  report.py  rules.py
src/cloudcleaner/adapters/: __init__.py  memory.py  s3.py
tests/: conftest.py  test_cli.py  test_config.py  test_pricing.py  test_quarantine.py  test_rules.py
